Add annotation to Item GUI.